frontend/scss/pages/types/_t-research-center.scss
.research-center-subnav {
  border-bottom: 1px solid $color__black--10;
  border-top: 1px solid $color__black--10;
  overflow-x: auto;
  overflow-y: hidden;
  padding-bottom: 28px;
  text-align: left !important;

  @include breakpoint('small-') {
    padding-bottom: 20px;
  }

  ul {
    display: block;
    text-align: left;
    white-space: nowrap;
    min-width: 100%;
  }

  li {
    display: inline-block;
  }

  .m-links-bar__item>.f-link {
    color: $color__black--90;
    font-family: $sans-serif-font--loaded;
    font-size: 17px;
    font-weight: 300;
    line-height: 28px;
    letter-spacing: 0.01em;
  }
}

.research-center {
  // Showcase immediately followed by Grid
  .showcase--research-center:has(+ .o-grid-block) {
    background-color: unset;
    padding-bottom: 0;

    .m-showcase-wrapper {
      flex-direction: row-reverse;
    }

    .showcase-header {
      display: none;
    }

    .showcase-title {
      font-size: 28px;
      line-height: 36px;
      margin-top: 18px;
    }
  }
  // Grid immediately following Showcase
  .showcase--research-center + .o-grid-block {
    margin-left: unset !important;
    margin-top: 40px;

    .m-title-bar, .hr, .m-listing__img {
      display: none;
    }

    .title {
      font-size: 28px;
      line-height: 36px;
    }

    .m-listing__meta .f-link {
      margin-top: 50px;
    }
  }

  .tag-banner-block--research-center {
    .background-wrapper::before {
      background-color: $color__black--10;
    }

    .body-wrapper {
      padding: 30px;

      @include breakpoint('xsmall') {
        padding: 15px;
      }
    }

    .text-wrapper {
      display: none;
    }

    .tag-wrapper {
      width: 100%;

      .m-tag-banner {
        gap: 40px;

        @include breakpoint('medium') {
          gap: 25px;
        }

        @include breakpoint('small-') {
          gap: 15px;
        }
      }
    }
  }

  .o-grid-block:has(#tools) {
    margin-left: unset;

    .m-title-bar {
      &, & > * {
        margin-top: unset;
      }

      &::before {
        display: none;
      }
    }

    @include breakpoint('xsmall') {
      .m-title-bar__links {
        display: inline;
      }
    }

    .hr {
      margin-top: 10px;

      @include breakpoint('small+') {
        display: none;
      }
    }

    .o-grid-listing {
      padding-top: 20px;

      .m-listing {
        padding-top: 30px;
      }

      .m-listing__meta {
        min-height: unset;
      }

      @include breakpoint('xsmall') {
        padding-top: 0;

        .m-listing {
          padding-top: 20px;
        }
      }
    }
  }
}

